syntax = "proto3";

package api.company.v1;

import "third_party/validate/validate.proto";
import "third_party/google/api/annotations.proto";
import "third_party/gogo/protobuf/gogo.proto";

option go_package = "career_backend/api/company/v1;v1";
option java_multiple_files = true;
option java_package = "api.company.v1";


service CompanyService {
	rpc CreateCompany (CreateCompanyRequest) returns (CreateCompanyReply){
		option (google.api.http) = {
			post: "/v1/companies/create"
			body: "*"
		};
	};
	rpc UpdateCompany (UpdateCompanyRequest) returns (UpdateCompanyReply){
		option (google.api.http) = {
			post: "/v1/companies/update/{id}"
			body: "*"
		};
	};
	rpc DeleteCompany (DeleteCompanyRequest) returns (DeleteCompanyReply){
		option (google.api.http) = {
			post: "/v1/companies/delete/{id}"
			body: "*"
		};
	};
	rpc GetCompany (GetCompanyRequest) returns (GetCompanyReply){
		option (google.api.http) = {
			get: "/v1/companies/{id}"
			body: "*"
		};
	};
	rpc GetCompanyByAddress (GetCompanyByAddressRequest) returns (GetCompanyReply){
		option (google.api.http) = {
			get: "/v1/companies/address/{wallet_address}"
			body: "*"
		};
	};
	rpc ListCompany (ListCompanyRequest) returns (ListCompanyReply){
		option (google.api.http) = {
			get: "/v1/companies"
			body: "*"
		};
	};
}

message Company {
	int64 id = 1;
	string name = 2;
	string walletAddress = 3;
	string logoUrl =4;
}

message CreateCompanyRequest {
	string name = 2;
	string walletAddress = 3;
	string logoUrl =4;
}
message CreateCompanyReply {
	int64 id = 1;
	string name = 2;
	string walletAddress = 3;
}

message UpdateCompanyRequest {
	int32 id =1;
}
message UpdateCompanyReply {}

message DeleteCompanyRequest {
	int32 id =1;
}
message DeleteCompanyReply {}

message GetCompanyRequest {
	int32 id =1;
}


message GetCompanyReply {

}

message GetCompanyByAddressRequest {
	string walletAddress =1;
}

message ListCompanyRequest {}
message ListCompanyReply {}